--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,12 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+*::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #FCF3E4;
+  border-radius: 3px;
+}
